--- a/MiniProject/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MiniProject/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MiniProject.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<h4>this is my test.</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
